2010-04-14  Helmut Eller  <heller@common-lisp.net>

	* swank.lisp (compile-file-for-emacs): Actually commit the change
	described in 2010-04-12.

2010-04-14  Helmut Eller  <heller@common-lisp.net>

	* slime.el ([test] interrupt-encode-message): New test.

2010-04-14  Helmut Eller  <heller@common-lisp.net>

	Handle errors during interrupt processing with SLDB.
	Bugfix for http://article.gmane.org/gmane.lisp.slime.devel/9641

	* swank.lisp (invoke-or-queue-interrupt): When the queue is full,
	process the interrupt immediately and also handle
	SERIOUS-CONDITIONs during interrupt processing in SLDB.  SLDB
	should work more likely than the interrupted code is expected to
	handle the condition.
	(with-interrupts-enabled%): Don't check for interrupts when
	toggling interrupts off.
	(wait-for-event): Add docstring.

2010-04-14  Helmut Eller  <heller@common-lisp.net>

	Move error handling and logging from swank-rpc.lisp to swank.lisp

	* swank.lisp (log-event, destructure-case, decode-message)
	(encode-message, decode-message, swank-protocol-error): Moved back
	to swank.lisp from swank-rpc.lisp.  It never belonged there
	anyway.

	* swank-rpc.lisp (read-message, write-message): New functions.
	(swank-reader-error): New condition.

2010-04-12  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-doc-bindings): Restore key for slime-apropos.

2010-04-12  Helmut Eller  <heller@common-lisp.net>

	Fix compile-file for various backends.

	* slime.el (slime-compile-file): Only pass non-nil keyword args to
	Lisp.
	(slime-simplify-plist): New helper.
	(slime-compile-and-load-file): Pass policy parameter directly
	without using global variables.

	* swank.lisp (compile-file-for-emacs): Change singature sightly.

2010-04-06  Stas Boukarev  <stassats@gmail.com>

	* slime.el (slime-create-compilation-log): Enable
	compilation-mode, which was enabled previously by
	slime-insert-compilation-log.

2010-04-05  Stas Boukarev  <stassats@gmail.com>
